<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.perrysetgo.illageSummerCamp.ui.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_log_in_to_create_events_in_order_to_create_an_account_please_send_us_an_email"
        android:id="@+id/registerLabel"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameInput"
        android:hint="@string/name"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:hint="@string/password"
        android:layout_below="@+id/nameInput"
        android:layout_alignEnd="@+id/nameInput"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testing_test_123"
        android:id="@+id/textView2"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="51dp"/>

</RelativeLayout>