<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:contentDescription="@string/event_photo"
        android:id="@+id/photoImageView"
        android:src="@drawable/no_image"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photoCaptionTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/caption"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_cuisine_type"
            android:id="@+id/photoAuthorTextView"
            android:textStyle="italic"/>

    </LinearLayout>
</LinearLayout>