<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/empty_placeholder"
        android:id="@+id/eventDateLabel"
        android:background="#8ec1da"
        android:textColor="@android:color/black"
        android:padding="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/eventDescriptionLabel"
        android:layout_marginEnd="4dp"
        android:textSize="12sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_a_140_character_tweet_used_to_test_the_dimensions_of_my_text_view_box_here_are_50_extra_characters_used_as_a_placeholder_for_tests"
        android:id="@+id/eventDescriptionLabel"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:layout_below="@+id/eventTitleLabel"
        android:layout_alignEnd="@+id/eventDateLabel"
        android:layout_marginEnd="50dp"/>

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awesome_event"
        android:id="@+id/eventTitleLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/empty_placeholder"
        android:id="@+id/eventLocationLabel"
        android:background="#8ec1da"
        android:textColor="@android:color/black"
        android:padding="4dp"
        android:layout_alignTop="@+id/eventDateLabel"
        android:layout_alignParentStart="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="4dp"
        android:textSize="12sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editButton"
        android:src="@drawable/ic_create_black_24dp"
        android:padding="0dp"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/eventDescriptionLabel"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="22dp" />

    <ImageButton
        android:contentDescription="@string/delete_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:src="@drawable/ic_delete_black_24dp"
        android:padding="0dp"
        android:visibility="invisible"
        android:layout_above="@+id/editButton"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:contentDescription="@string/save_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:src="@drawable/ic_save_black_24dp"
        android:padding="0dp"
        android:visibility="visible"
        android:layout_alignTop="@+id/eventDescriptionLabel"
        android:layout_alignStart="@+id/deleteButton" />

</RelativeLayout>